# thai-column-classifier

./: .gitignore  LICENSE  README.md  classification_results.csv  column_classifier.py  expected.csv  main.py  pyproject.toml  requirements.txt  test_check_id.py  test_check_sensitive.py  thai_id.md  thai_sensitive.md
classifier/: __init__.py  engine.py  models.py  normalize.py  registry.py
classifier/registry/: cid_registry.yaml
data/: test_data.csv
data/test_csv_1/: expected.csv
data/test_csv_3/: expected.csv  test_data.csv
data/test_csv_4/: expected.csv  test_data.csv
data/test_csv_5/: expected.csv
first_version/: README.md  column_classifier.py  diff.txt  main.py  test_check_sensitive.py
first_version/data/: expected.csv  test_data.csv
first_version/data/test_csv_1/: expected.csv  test_data.csv
first_version/data/test_csv_2/: expected.csv  test_data.csv
first_version/data/test_csv_5/: test_data.csv
first_version/src/: thai_id_column_detector.py
src/: thai_id_column_detector.py  thai_sensitive_column_detector.py
thai_column_classifier/: __init__.py  classifier.py  thai_id_column_detector.py  thai_sensitive_column_detector.py
